Demos: fix style on listview-linkbar demo (cherry picked from commit 6d14e13e06ffae01c266ca1107e349d1a292fd2d)

--- a/demos/listview-autodividers-linkbar/autodividers-linkbar.css
+++ b/demos/listview-autodividers-linkbar/autodividers-linkbar.css
@@ -1,7 +1,7 @@
-#sorter .ui-li.ui-li-static.ui-btn-up-c {
+#sorter li {
 	height: 3.8%;
 	padding: 0;
-	font-size: 8px;
+	font-size: 14px;
 	padding-left: 5px;
 	line-height: 1.8em;
 }
