--- a/demos/listview-autodividers-linkbar/autodividers-linkbar.css
+++ b/demos/listview-autodividers-linkbar/autodividers-linkbar.css
@@ -1,9 +1,14 @@
 #sorter li {
 	height: 3.8%;
 	padding: 0;
-	font-size: 14px;
+	font-size: 8px;
 	padding-left: 5px;
 	line-height: 1.8em;
+	text-align: left;
+}
+#sorter li span {
+	margin-top: 8%;
+	display: block;
 }
 #sorter{
 	position: fixed;
